--- a/custom/mymodule/views/views.xml
+++ b/custom/mymodule/views/views.xml
@@ -1,5 +1,17 @@
 <odoo>
-  <data>
+  <record model="ir.actions.act_window" id="course_list_action">
+    <field name="name">Courses</field>
+    <field name="res_model">openacademy.course</field>
+    <field name="view_mode">tree,form</field>
+    <field name="context" eval="{'search_default_my_courses': 1}"/>
+    <field name="help" type="html">
+        <p class="o_view_nocontent_smiling_face">Create the first course
+        </p>
+    </field>
+</record>
+<menuitem id="courses_menu" name="Courses" parent="openacademy_menu"
+                  action="course_list_action"/>
+  <!-- <data> -->
     <!-- explicit list view definition -->
 <!--
     <record model="ir.ui.view" id="mymodule.list">
@@ -56,5 +68,5 @@
     <menuitem name="Server to list" id="mymodule" parent="mymodule.menu_2"
               action="mymodule.action_server"/>
 -->
-  </data>
+  <!-- </data> -->
 </odoo>
