--- a/custom/mymodule/views/views.xml
+++ b/custom/mymodule/views/views.xml
@@ -1,14 +1,75 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-  <record model="ir.actions.act_window" id="course_list_action">
-    <field name="name">Courses</field>
-    <field name="res_model">openacademy.course</field>
-    <field name="view_mode">tree,form</field>
-    <!-- <field name="context" eval="{'search_default_my_courses': 1}"/>
-    <field name="help" type="html">
-        <p class="o_view_nocontent_smiling_face">Create the first course
-        </p>
-    </field> -->
-</record>
-<menuitem id="courses_menu" name="Courses"  parent="menu_root"
-                  action="course_list_action"/>
+    <!-- Courses menu. Views: tree, form, kanban -->
+    <record id="course_tree" model="ir.ui.view">
+        <field name="name">openacademy.course.tree</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name" />
+                <!-- <field name="instructor_id" /> -->
+                <field name="state" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="course_form" model="ir.ui.view">
+        <field name="name">openacademy.course.form</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name" />
+                            <field name="state" />
+                            <field name="description" />
+                        </group>
+                        <group>
+                            <!-- <field name="instructor_id" /> -->
+                        </group>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="course_dashboard" model="ir.ui.view">
+        <field name="name">openacademy.course.kanban</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="state">
+                <field name="name" />
+                <field name="instructor_id"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div  t-attf-class="oe_kanban_content">
+                            <field name="name" />
+                            <field name="description" />
+                            <!-- <field name="instructor_id"/> -->
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
+    <record model="ir.actions.act_window" id="course_list_action">
+        <field name="name">Courses</field>
+        <field name="res_model">openacademy.course</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="help" type="html">
+            <p>
+        Create course
+      </p>
+        </field>
+    </record>
+
+
+    <menuitem id="main_openacademy_menu" name="Open Academy" web_icon="mymodule,static/icon.png" />
+    <!-- <menuitem id="openacademy_menu" name="Open Academy" parent="main_openacademy_menu" /> -->
+    <menuitem id="courses_menu" name="Courses" parent="main_openacademy_menu" action="course_list_action" />
+    <!-- <menuitem id="instructors_menu" name="Instructors" parent="main_openacademy_menu" action="instructor_list_action" /> -->
+
 </odoo>
